DPTU-6 Ported User Account persistence to MySql

--- a/src/main/java/resources/DpTu.properties
+++ b/src/main/java/resources/DpTu.properties
@@ -17,7 +17,7 @@ language=en
 country=us
 #country=DE
 
-edu.regis.shatu.DB_HOST=localhost
-edu.regis.shatu.DB_NAME=ShaTuDB
-edu.regis.shatu.DB_USER=ShaTuTs
-edu.regis.shatu.DB_PASS=ShaTu2023
+edu.regis.dptu.DB_HOST=localhost
+edu.regis.dptu.DB_NAME=DpTuDB
+edu.regis.dptu.DB_USER=DpTuTs
+edu.regis.dptu.DB_PASS=DpTu2023
